# navi-bench

./: .gitignore  CONTRIBUTING.md  README.md  demo.py  pyproject.toml
evaluation/: browser.py  cli.py  custom_task.py  dataset.py  eval_n1.py  prepare_page.js  recorder.py  stats.py  vis.py
examples/: example.json
navi_bench/: base.py  dates.py  dom_visibility.js  relative_dates.py
navi_bench/apartments/: apartments_url_match.py
navi_bench/craigslist/: craigslist_url_match.py
navi_bench/google_flights/: google_flights.proto  google_flights_pb2.py  google_flights_search_match.py
navi_bench/opentable/: opentable_info_gathering.js  opentable_info_gathering.py
navi_bench/resy/: resy_availability_extractor.js  resy_no_availability_check.js  resy_restaurant.csv  resy_url_match.py
tests/: test_apartments_url_match.py  test_base.py  test_browser.py  test_cli.py  test_custom_task.py  test_dates.py  test_opentable_info_gathering.py  test_recorder.py  test_relative_dates.py  test_resy_url_match.py  test_safe_evaluate.py  test_safe_update.py  test_stats.py  test_vis.py
tmp/: test_encoding.txt
