[project]
name = "navi-bench"
version = "1.0.0"
description = "Yutori Navi-Bench: benchmarking web agents on everyday tasks directly on real websites"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Yutori" }
]
keywords = ["benchmark", "evaluation", "agent", "environment", "reinforcement learning"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "beartype>=0.19.0",
    "loguru>=0.7.0",
    "playwright>=1.40.0",
    "protobuf==6.33.0",
    "pydantic>=2.0.0",
    "typing_extensions>=4.0.0",
]

[project.optional-dependencies]
eval = [
    "aiofiles>=23.0.0",
    "datasets>=2.14.0",
    "openai>=1.69.0",
    "Pillow>=10.0.0",
    "tabulate>=0.9.0",
    "yutori>=0.4.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://yutori.com/blog/introducing-navigator"
Repository = "https://github.com/yutori-ai/navi-bench"
Issues = "https://github.com/yutori-ai/navi-bench/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["navi_bench"]

[tool.isort]
profile = "black"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "W291", "W292", "W293"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
combine-as-imports = true
known-first-party = ["evaluation"]
lines-after-imports = 2
